# SkyRenderer

./: .clang-format  CMakeLists.txt  README.MD  imgui.ini
asset/: noiseErosionPacked_32_32_32.raw  noiseErosion_32_32_32.raw
asset/glsl/: aerial_lut.comp  cloud.frag  mesh.frag  mesh.vert  multiscattering.comp  quad.vert  sky.frag  sky_lut.frag  sun.frag  sun.vert  transmittance.comp
src/: atmosphere.hpp  common.hpp  main.cpp  sky.hpp
